# PrepGenius

./: .gitignore  README.md  config_test.py  create.py  database.py  insert_subject_and_topic.py  insert_topic.py  insert_users.py  pyproject.toml  requirements.txt  setup_mysql_dev.sql  setup_quiz_dev.sql  setup_quiz_mysql_dev.sql  storage.py  web_scrapping.py
api/: app.py
api/migrations/versions/: 498a90e4ef00_update_selected_tables.py  4c09667f75d4_update_answers_table.py  4fa474a295a8_update_selected_tables.py  a6e5b666ad3b_add_selected_su.py  b756dce1ae70_topics.py  d29b7ee4d168_update_answers_table.py
api/v1/: .env  app.py
api/v1/views/: __init__.py  question.py  subject.py  user.py
api/views/: __init__.py  question.py  subject.py  user.py
models/: __init__.py  answer.py  base_model.py  extensions.py  option.py  question.py  quiz.py  selected_subject.py  subject.py  topic.py  user.py
server_side_api/: app.py
server_side_api/migrations/versions/: 03c760cc6d42_add_num_questions.py  3acd19b21ac5_update.py  60c01b14d59e_fix_errosr.py
server_side_api/views/: __init__.py  question.py  subject.py  topic.py  user.py
tests/: test_user.py
